@@ -407,6 +407,7 @@ but some of them use Unicode properties if PCRE2_UCP is set. You can use
   (?i)            caseless
   (?J)            allow duplicate names
   (?m)            multiline
+  (?n)            no auto capture 
   (?s)            single line (dotall)
   (?U)            default ungreedy (lazy)
   (?x)            extended: ignore white space except in classes
